# CSE-Journey

./: LICENSE  README.md
Practice-Problems/Beecrowd/: README.md
Practice-Problems/CodeChef/: README.md
Practice-Problems/Codeforces/: README.md
Practice-Problems/LeetCode/: README.md
Practice-Problems/Vjudge/: README.md
Semester-1/C-Programming/: 0_and_1c.c  1st-semester-final-1.c  1st-semester-final-10.c  1st-semester-final-11.c  1st-semester-final-12.c  1st-semester-final-13.c  1st-semester-final-14.c  1st-semester-final-15.c  1st-semester-final-16.c  1st-semester-final-17.c  1st-semester-final-18.c  1st-semester-final-19.c  1st-semester-final-2.c  1st-semester-final-20.c  1st-semester-final-3.c  1st-semester-final-4.c  1st-semester-final-5.c  1st-semester-final-6.c  1st-semester-final-7.c  1st-semester-final-8.c  1st-semester-final-9.c  2d-array.c  A_spread.c  CMakeLists.txt  N-card-ARRAY.c  add_4_at_the_end.c  adjacent_occurrences.c  ai.c  array.c  array.cpp  array1.c  array_card.c  card.c  consonant.c  consonant_vowel.c  counting.c  even.c  even_or_odd.c  factorial.c  file.c  (+12 more)
Semester-1/Learning.c/: 09.c  Consumption.c  DigitSummation.cpp  Distance Between Two Point.c  LearnproblemSolving.cpp  NestedLoo0p.cpp  Positive Numbers.c  SimpleCalculate.c  Untitled1.c  a.cpp  adividedbyb.cpp  agechef.cpp  airline.cpp  area.c  areacircle.cpp  asdkhflskdj.cpp  attack.cpp  attack1.cpp  average1.c  average2.c  basicdatatypes.cpp  boneApetit.cpp  candidivide.cpp  chef.cpp  circle.cpp  class12.cpp  class13.cpp  cube.cpp  (+59 more)
Semester-2/: README.md
Templates/: template.cpp
