cmake_minimum_required(VERSION 4.2)
project(Programming C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(Programming
        0_and_1c.c
        A_spread.c
        add_4_at_the_end.c
        adjacent_occurrences.c
        ai.c
        array1.c
        consonant.c
        consonant_vowel.c
        counting.c
        even.c
        even_or_odd.c
        factorial.c
        finding2ndLargestnumber.c
        findingMaximumandMinimum.c
        honor_name_japan.c
        loweclasstoupperclass.c
        noway.c
        printfing_in_reverrse_order.c
        some_of_all_elements.c
        string.c
        swapping_letter.c)
